<!--
  ~ Copyright (c) 2020.
  ~ RF Controls
  ~ Design and Programming by Alex Dovby
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:background="@color/colorPrimaryDark"
        app:title="@string/empty">
        <PreferenceCategory
            android:layout_width="match_parent"
            app:layout="@layout/pref_about_ic">
            <!--            app:title="@string/about_header">-->
            <EditTextPreference
                android:selectable="false"
                android:shouldDisableView="true"
                app:key="version"
                app:summary="@string/about_copyright"
                app:title="@string/version_title"
                app:useSimpleSummaryProvider="false" />
        </PreferenceCategory>
    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/btn_settings"
        app:title="@string/ip_header">
        <EditTextPreference
            android:icon="@drawable/ic_ip"
            app:key="panel_ip"
            app:title="@string/ip_adr_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
        android:icon="@drawable/ic_ip"
        app:key="port"
        app:title="@string/port_title"
        app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_smart_panel"
        app:title="@string/debug_header">
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_debug"
            app:key="sw_debug"
            app:summaryOff="@string/debug_summary_off"
            app:summaryOn="@string/debug_summary_on"
            app:title="@string/debug_title" />
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_clear"
            app:key="sw_clear_cache"
            app:summaryOff="@string/cache_summary_off"
            app:summaryOn="@string/cache_summary_on"
            app:title="@string/cache_title" />
    </PreferenceCategory>

</PreferenceScreen>